[gd_scene load_steps=2 format=3 uid="uid://d2qencmne6r22"]

[ext_resource type="Script" uid="uid://dg2ft5jqtjga" path="res://objects/npc/shop/shop_item/shop_item.gd" id="1_k8a2t"]

[node name="ShopItem" type="Control"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = 26.0
offset_right = 46.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_k8a2t")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 28.0
offset_top = 23.0
offset_right = 72.0
offset_bottom = 76.0
stretch_mode = 5

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 102.0
offset_right = 70.0
offset_bottom = 125.0
text = "Gi√°:"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 75.0
offset_right = 72.0
offset_bottom = 98.0
text = "name"

[node name="StockLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 127.0
offset_right = 72.0
offset_bottom = 150.0
text = "stock"

[node name="BuyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 159.0
offset_right = 87.0
offset_bottom = 190.0
text = "Mua"
